--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
-meta_product_name: "Product Name"
-meta_title: "Product name - Product tagline"
-meta_description: "Relevant description"
+meta_product_name: "Surf Your Trip"
+meta_title: "Surf Your Trip - Organize your next 🏄‍♂️ trip!"
+meta_description: "Surf Your Trip is the bible for all ⓢⓤⓡⓕⓔⓡⓢ around 🌍"
 meta_image: "logo.png" # should exist in `app/assets/images/`
